# myassistant

./: CLAUDE.md  README.md  kickstart.md  run_chatbot.py  use-case.md
backend/: build.sbt
backend/http_server/: .gitignore  build.sbt  kickstart.md  low-level-design.md
backend/http_server/k6/: smoke.js
backend/http_server/schema/: 01_spine.sql  04_schema_governance.sql  06_fact.sql
backend/k6/: load.js
backend/mcp_server/: kickstart.md  pyproject.toml  server.py
backend/project/: plugins.sbt
client/chatbot/: __main__.py  chatbot.py  kickstart.md  pyproject.toml  run.py
client/chatbot/chatbot/: chatbot.py
client/chatbot_tests/: kickstart.md  pyproject.toml
client/chatbot_tests/results/: harness-results-v3.md  harness-results-v4.md  harness-results-v5.md  harness-results.md
client/chatbot_tests/tool_harness/: __init__.py  agentic_runner.py  executors.py  harness.py  mock_server.py  scenarios.py  server_manager.py  tool_definitions.py
client/chatbot_tests/tool_harness/tests/: test_agentic_runner.py  test_executors.py  test_server_manager.py
client/common/: agentic_runner.py  live_executor.py  pyproject.toml  server_manager.py  system_prompt.py  tool_definitions.py
docs/: harness-results-final.md  harness-results-v2.md  harness-results-v3.md  harness-results-v4.md  harness-results-v5.md  harness-results.md  http-contract.md  mcp-tools.md
mcp_server/: client.py  pyproject.toml
mcp_server/tests/: test_audit.py  test_documents.py  test_facts.py  test_files.py  test_person_household.py  test_relationships.py  test_schemas.py
mcp_server/tools/: audit.py  facts.py  households.py  relationships.py  schemas.py
schema/: 05_document.sql
scripts/: check-e2e-coverage.sh
tests/tool_harness/: harness.py  mock_server.py  scenarios.py  tool_definitions.py
(+207 files in other folders)
