[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myassistant-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "myassistant-common",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["chatbot"]
