[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myassistant-chatbot-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "myassistant-common",
    "anthropic>=0.40",
    "boto3>=1.34",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tool_harness/tests"]

[tool.hatch.build.targets.wheel]
packages = ["tool_harness"]
